--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 .App {
   /* text-align: center; */
-  background-color: #1f2235;
-  color: white;
+  /* background-color: #1f2235; */
+  background-color: #ffffff;
+  color: #333333;
 }
 
 .App-logo {
@@ -16,7 +17,8 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  /* background-color: #282c34; */
+  background-color: #ffffff;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -27,7 +29,7 @@
 }
 
 .App-link {
-  color: #61dafb;
+  color: #1978bc;
 }
 
 @keyframes App-logo-spin {
