--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,33 @@ code {
 .chakra-tabs__tab {
   color: white !important;
 }
+
+@font-face {
+  font-family: "Roboto Thin";
+  src: local("Open Sans"),
+    url(./assets/fonts/Roboto-Thin.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: "Roboto Light";
+  src: local("Open Sans"),
+    url(./assets/fonts/Roboto-Light.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: "Roboto Regular";
+  src: local("Open Sans"),
+    url(./assets/fonts/Roboto-Regular.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: "Roboto Medium";
+  src: local("Open Sans"),
+    url(./assets/fonts/Roboto-Medium.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: "Roboto Bold";
+  src: local("Open Sans"),
+    url(./assets/fonts/Roboto-Bold.ttf) format("truetype");
+}
